made vision board with day 1 curriculm

--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Vision Board</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <script src="script.js"></script>
+    <div>
+      <h1>supercalifragilisticexpialidocious</h1>
+      <h2>supercalifragilisticexpialidocious</h2>
+      <h3>supercalifragilisticexpialidocious</h3>
+      <h4>supercalifragilisticexpialidocious</h4>
+      <p>supercalifragilisticexpialidocious</p>
+      <h5>supercalifragilisticexpialidocious</h5>
+      <h6>supercalifragilisticexpialidocious</h6>
+    </div>
+    
+    <h1 class="padding">supercalifragilisticexpialidocious</h1>
+    <h2 class ="center">supercalifragilisticexpialidocious</h2>
+    <h3 class ="left">supercalifragilisticexpialidocious</h3>
+    <h4 class ="right">supercalifragilisticexpialidocious</h4>
+    <p class ="end">supercalifragilisticexpialidocious</p>
+    <h5 class ="color">supercalifragilisticexpialidocious</h5>
+    <h6 style ="color:blue;">supercalifragilisticexpialidocious</h6>
   </body>
 </html>
